--- a/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
@@ -14,10 +14,13 @@
             {{form_row(form.description, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             
             <div class="upload_image_container">
-                {{form_row(form.image)}}
-                {{form_row(form.removeImage)}}
+                <img class="avatar" src="{{logo}}" alt="Logo"/>
+                <div class="uploader">
+                    {{form_row(form.image)}}
+                    {{form_row(form.removeImage)}}
+                </div>
             </div>
-            <img class="avatar" src="{{logo}}" alt="Logo"/>
+            
             
             {{form_row(form.active)}}
 
