--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -653,19 +653,32 @@ table {
 }
 
 .upload_image_container {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 5px;
+    padding: 5px 5px 0 5px;
+    
+    .uploader {
+        display: inline-block;
+        vertical-align: top;
+        margin-left: 5px;
+        
+        .material_upload {
+            margin-bottom: 5px;
+        }
+    }
 }
 
 .attemptLogin_reset_text {
     margin-bottom: 0;
 }
 
-.unit_test_howTo_example {
+.square_code {
     background-color: #c6c6c6;
     border: 1px dotted #000000;
     padding: 10px;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
 }
 
 #body_progress {
@@ -847,4 +860,17 @@ table {
 }
 ::-ms-input-placeholder {
     color: $mdc-theme-on-primary;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px $mdc-theme-on-surface; 
+}
+::-webkit-scrollbar-thumb {
+    background: $mdc-theme-primary; 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: $mdc-theme-secondary; 
 }
