--- a/symfony_fw/templates/render/control_panel/microservice_cron_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_cron_create.html.twig
@@ -5,9 +5,8 @@
     <p>{% trans %}microserviceCronCreate_2{% endtrans %}</p>
     <form id="form_cp_microservice_cron_create" action="{{path("cp_microservice_cron_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-        
+        {{form_row(form.time, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.code, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms", 'attr' : {'id': "cron_code_row"}})}}
-        {{form_row(form.active)}}
 
         {{form_widget(form._token)}}
 
