--- a/symfony_fw/templates/render/control_panel/microservice_cron_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_cron_profile.html.twig
@@ -3,10 +3,12 @@
 <h2 class="mdc-typography--headline6">{% trans %}microserviceCronProfile_1{% endtrans %}</h2>
 <form id="form_cp_microservice_cron_profile" action="{{path("cp_microservice_cron_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
     {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-    
+    {{form_row(form.time, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
     {{form_row(form.code, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms", 'attr' : {'id': "cron_code_row"}})}}
-    {{form_row(form.active)}}
-
+    
+    <p class="info_field">{% trans %}microserviceCronFormType_4{% endtrans %}</p>
+    <p>{{response.values.lastExecution}}</p>
+    
     {{form_widget(form._token)}}
 
     {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
