--- a/symfony_fw/templates/render/control_panel/microservice_cron_select.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_cron_select.html.twig
@@ -34,6 +34,11 @@
                             <i class="material-icons">arrow_drop_down</i>
                             <i class="material-icons">arrow_drop_up</i>
                         </th>
+                        <th>
+                            <span>{% trans %}microserviceCronSelect_8{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
+                        </th>
                     </tr>
                 </thead>
                 <tbody class="table_tbody">
@@ -41,7 +46,7 @@
                 </tbody>
             </table>
         </div>
-        <button id="cp_microservice_cron_select_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button">{% trans %}microserviceCronSelect_8{% endtrans %}</button>
+        <button id="cp_microservice_cron_select_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button">{% trans %}microserviceCronSelect_9{% endtrans %}</button>
     </div>
     <div id="cp_microservice_cron_select_mobile" class="display_mobile">
         {% form_theme form "@templateRoot/layout/layout_form_materialDesign.html.twig" %}
