--- a/symfony_fw/templates/render/control_panel/microservice_cron_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_cron_profile.html.twig
@@ -5,8 +5,9 @@
     {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
     {{form_row(form.time, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
     {{form_row(form.code, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms", 'attr' : {'id': "cron_code_row"}})}}
+    {{form_row(form.active)}}
     
-    <p class="info_field">{% trans %}microserviceCronFormType_4{% endtrans %}</p>
+    <p class="info_field">{% trans %}microserviceCronFormType_7{% endtrans %}</p>
     <p>{{response.values.lastExecution}}</p>
     
     {{form_widget(form._token)}}
