--- a/symfony_fw/templates/render/control_panel/page_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_create.html.twig
@@ -5,7 +5,7 @@
     <p>{% trans %}pageCreate_2{% endtrans %}</p>
     <form id="form_cp_page_create" action="{{path("cp_page_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.alias, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-        {{form_row(form.parent, {'dense': ""})}}
+        {{form_row(form.parent, {'dense': "", 'firstOption': "empty"})}}
         {{form_row(form.title, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.controllerAction, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.argument, {'dense': "", 'styleType': "outlinedTrailing"})}}
