--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -51,7 +51,7 @@
         <link href="{{asset("css/system/loader.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/captcha.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/table_and_pagination.css")}}" rel="stylesheet"/>
-        <link href="{{asset("css/system/upload.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/upload_chunk.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/wysiwyg.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/chaato.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/widget.css")}}" rel="stylesheet"/>
@@ -164,7 +164,7 @@
         <script src="{{asset("js/system/Search" ~ javascriptMinify)}}"></script>
         <script src="{{asset("js/system/TableAndPagination" ~ javascriptMinify)}}"></script>
         <script src="{{asset("js/system/Captcha" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("js/system/Upload" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/UploadChunk" ~ javascriptMinify)}}"></script>
         <script src="{{asset("js/system/Language" ~ javascriptMinify)}}"></script>
         <script src="{{asset("js/system/Wysiwyg" ~ javascriptMinify)}}"></script>
         <script src="{{asset("js/system/Chaato" ~ javascriptMinify)}}"></script>
