--- a/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
@@ -9,9 +9,9 @@
         <legend>{% trans %}microserviceApiProfile_2{% endtrans %}</legend>
         <p>{% trans %}microserviceApiProfile_3{% endtrans %}</p>
         <form id="form_cp_microservice_api_profile" action="{{path("cp_microservice_api_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="upload_image_container">
+            <div class="upload_container">
                 <img class="avatar" src="{{logo}}" alt="Logo"/>
-                <div class="uploader">
+                <div class="input">
                     {{form_row(form.image)}}
                     {{form_row(form.removeImage)}}
                 </div>
