--- a/symfony_fw/templates/include/upload_chunk.html.twig
+++ b/symfony_fw/templates/include/upload_chunk.html.twig
@@ -14,18 +14,18 @@
     <div class="controls">
         <button class="mdc-button mdc-button--dense mdc-button--raised button_start" type="button">
             <i class="material-icons mdc-button__icon">play_arrow</i>
-            <span>{% trans %}upload_1{% endtrans %}</span>
+            <span>{% trans %}upload_chunk_1{% endtrans %}</span>
         </button>
         <button class="mdc-button mdc-button--dense mdc-button--raised button_stop" type="button" disabled="disabled">
             <i class="material-icons mdc-button__icon">stop</i>
-            <span>{% trans %}upload_2{% endtrans %}</span>
+            <span>{% trans %}upload_chunk_2{% endtrans %}</span>
         </button>
     </div>
     
     <div class="popupWait">
         <i class="material-icons close" disabled="disabled">close</i>
         <div class="content">
-            <p>{% trans %}upload_3{% endtrans %}</p>
+            <p>{% trans %}upload_chunk_3{% endtrans %}</p>
             <p class="status"></p>
             
             {{-include("@templateRoot/include/progress_bar.html.twig")-}}
@@ -35,8 +35,8 @@
     </div>
 </div>
 <script>
-    var textUpload = {
-        'label_1': "{{"upload_4"|trans}}",
-        'label_2': "{{"upload_5"|trans}}"
+    var textUploadChunk = {
+        'label_1': "{{"upload_chunk_4"|trans}}",
+        'label_2': "{{"upload_chunk_5"|trans}}"
     };
 </script>
